--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/chrome": "^0.0.210"
+    "@types/chrome": "^0.0.210",
+    "chrome-remote-interface": "^0.32.0"
+  },
+  "devDependencies": {
+    "@types/chrome-remote-interface": "^0.31.9",
+    "esbuild": "^0.17.5",
+    "resolve-glob": "^1.0.0"
   }
 }
