--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
 	"compilerOptions": {
-		"target": "ES6",
-		"module": "ES2015",
+		"target": "ES2020",
+		"module": "ES2020",
 		"noImplicitAny": false,
+		"moduleResolution": "node",
+		"allowSyntheticDefaultImports": true,
 		"removeComments": true,
 		"preserveConstEnums": true,
 		"allowJs": true
