--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"allowSyntheticDefaultImports": true,
 		"removeComments": true,
 		"preserveConstEnums": true,
-		"allowJs": true
+		"allowJs": false
 	},
 	"include": ["**/*"],
 	"exclude": ["node_modules", "**/*.spec.ts"]
